// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[component] Editor should render with all passed props 1`] = `
<DocumentFragment>
  <div
    style="position: relative; text-align: left; box-sizing: border-box; padding: 0px; overflow: hidden; height: 100%; font-family: \\"Dank Mono\\", \\"Fira Code\\", monospace; color: rgb(214, 222, 235); background-color: rgb(1, 22, 39);"
  >
    <textarea
      autocapitalize="off"
      autocomplete="off"
      autocorrect="off"
      class="npm__react-simple-code-editor__textarea"
      data-gramm="false"
      spellcheck="false"
      style="margin: 0px; border: 0px; background: none; box-sizing: inherit; display: inherit; font-family: inherit; font-style: inherit; font-variant-ligatures: inherit; font-weight: inherit; letter-spacing: inherit; line-height: inherit; tab-size: inherit; text-indent: inherit; text-rendering: inherit; text-transform: inherit; white-space: pre-wrap; word-break: keep-all; overflow-wrap: break-word; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; resize: none; overflow: hidden; padding: 10px 10px 10px 10px;"
    >
      foobar
    </textarea>
    <pre
      aria-hidden="true"
      style="margin: 0px; border: 0px; background: none; box-sizing: inherit; display: inherit; font-family: inherit; font-style: inherit; font-variant-ligatures: inherit; font-weight: inherit; letter-spacing: inherit; line-height: inherit; tab-size: inherit; text-indent: inherit; text-rendering: inherit; text-transform: inherit; white-space: pre-wrap; word-break: keep-all; overflow-wrap: break-word; position: relative; pointer-events: none; padding: 10px 10px 10px 10px;"
    >
      <div
        class="token-line"
        style="color: rgb(214, 222, 235);"
      >
        <span
          class="token plain"
        >
          f
          <span
            style="background-color: red;"
          >
            o
          </span>
          <span
            style="background-color: red;"
          >
            o
          </span>
          bar
        </span>
      </div>
    </pre>
    <style
      type="text/css"
    >
      
/**
 * Reset the text fill color so that placeholder is visible
 */
.npm__react-simple-code-editor__textarea:empty {
  -webkit-text-fill-color: inherit !important;
}

/**
 * Hack to apply on some CSS on IE10 and IE11
 */
@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  /**
    * IE doesn't support '-webkit-text-fill-color'
    * So we use 'color: transparent' to make the text transparent on IE
    * Unlike other browsers, it doesn't affect caret color in IE
    */
  .npm__react-simple-code-editor__textarea {
    color: transparent !important;
  }

  .npm__react-simple-code-editor__textarea::selection {
    background-color: #accef7 !important;
    color: transparent !important;
  }
}

    </style>
  </div>
</DocumentFragment>
`;

exports[`[component] Editor should render without any passed props 1`] = `
<DocumentFragment>
  <div
    style="position: relative; text-align: left; box-sizing: border-box; padding: 0px; overflow: hidden; height: 100%; font-family: \\"Dank Mono\\", \\"Fira Code\\", monospace; color: rgb(214, 222, 235); background-color: rgb(1, 22, 39);"
  >
    <textarea
      autocapitalize="off"
      autocomplete="off"
      autocorrect="off"
      class="npm__react-simple-code-editor__textarea"
      data-gramm="false"
      spellcheck="false"
      style="margin: 0px; border: 0px; background: none; box-sizing: inherit; display: inherit; font-family: inherit; font-style: inherit; font-variant-ligatures: inherit; font-weight: inherit; letter-spacing: inherit; line-height: inherit; tab-size: inherit; text-indent: inherit; text-rendering: inherit; text-transform: inherit; white-space: pre-wrap; word-break: keep-all; overflow-wrap: break-word; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; resize: none; overflow: hidden; padding: 10px 10px 10px 10px;"
    />
    <pre
      aria-hidden="true"
      style="margin: 0px; border: 0px; background: none; box-sizing: inherit; display: inherit; font-family: inherit; font-style: inherit; font-variant-ligatures: inherit; font-weight: inherit; letter-spacing: inherit; line-height: inherit; tab-size: inherit; text-indent: inherit; text-rendering: inherit; text-transform: inherit; white-space: pre-wrap; word-break: keep-all; overflow-wrap: break-word; position: relative; pointer-events: none; padding: 10px 10px 10px 10px;"
    >
      <div
        class="token-line"
        style="color: rgb(214, 222, 235);"
      >
        <span
          class="token plain"
          style="display: inline-block;"
        >
          

        </span>
      </div>
    </pre>
    <style
      type="text/css"
    >
      
/**
 * Reset the text fill color so that placeholder is visible
 */
.npm__react-simple-code-editor__textarea:empty {
  -webkit-text-fill-color: inherit !important;
}

/**
 * Hack to apply on some CSS on IE10 and IE11
 */
@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  /**
    * IE doesn't support '-webkit-text-fill-color'
    * So we use 'color: transparent' to make the text transparent on IE
    * Unlike other browsers, it doesn't affect caret color in IE
    */
  .npm__react-simple-code-editor__textarea {
    color: transparent !important;
  }

  .npm__react-simple-code-editor__textarea::selection {
    background-color: #accef7 !important;
    color: transparent !important;
  }
}

    </style>
  </div>
</DocumentFragment>
`;
